--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -1,21 +1,30 @@
+:root {
+    --header-footer-color: #5A7D7C;
+    --nav-color: #232C33;
+    --main-color: #DADFF7;
+    --aside-color: #A0C1D1;
+}
+
 * {
     margin: 0;
     padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
     display: grid;
     height: 100vh;
-    grid-template: auto 1fr 300px / 1fr 300px;
+    grid-template: auto 3fr 1fr / 3fr 1fr;
 }
 
 header {
-    background: rgb(168, 230, 235);
+    background: var(--header-footer-color);
     grid-column: 1 / 3;
 }
 
 header h1 {
     padding: 2rem;
+    color: white;
 }
 
 nav {
@@ -26,7 +35,7 @@ nav {
     display: flex;
     list-style: none;
     flex-wrap: wrap;
-    background: rgb(6, 113, 128);
+    background: var(--nav-color);
     color: white;
     align-items: center;
 }
@@ -37,24 +46,21 @@ nav {
 }
 
 main {
-    background: rgb(237, 255, 235);
+    background: var(--main-color);
     grid-column: 1 / 2;
     padding: 1rem;
 }
 
 .right-sidebar {
-    background: rgb(253, 199, 154);
+    background: var(--aside-color);
     grid-column: 2 / 3;
     padding: 1rem;
 }
 
 footer {
-    background: rgb(6, 113, 128);
+    background: var(--header-footer-color);
     padding: 2rem;
     text-align: center;
     grid-column: 1 / 3;
     color: white;
 }
-
-/* look up how to get the aside to drop beneath the main when viewport is reduced */
-/* change fonts and color scheme */
