--- a/styles/base.css
+++ b/styles/base.css
@@ -14,6 +14,9 @@
 
 body {
     font-family: "Outfit", Helvetica, sans-serif;
+    max-width: 1000px;
+    display: block;
+    margin: auto;
 }
 
 h1, h2, h3 {
