--- a/styles/base.css
+++ b/styles/base.css
@@ -1,8 +1,9 @@
 :root {
-    --header-footer-color: #5A7D7C;
-    --nav-color: #232C33;
-    --main-color: #e1e9e7;
-    --card-color: #A0C1D1;
+    --green-color: #5A7D7C;
+    --dark-grey-color: #232C33;
+    --light-green-color: #e6f5f1;
+    --blue-color: #A0C1D1;
+    --light-blue-color: #ebf8ff;
     --heading-font: "Bree Serif", "Times New Roman", serif;
 }
 
@@ -24,8 +25,12 @@ h1, h2, h3 {
     font-weight: 500;
 }
 
+h1 {
+    background: var(--light-blue-color)
+}
+
 header {
-    background: var(--card-color);
+    background: var(--blue-color);
 }
 
 header p{
@@ -33,15 +38,17 @@ header p{
     text-align: center;
 
 }
-.course-title {
+#course-title {
     display: block;
     margin: 0 auto;
     font-size: 2rem;
     font-family: var(--heading-font);
+    padding: 1rem;
+    text-align: center;
 }
 
 nav {
-    background: var(--nav-color);
+    background: var(--dark-grey-color);
     margin: 0 auto;
 }
 nav ul {
@@ -56,7 +63,7 @@ nav ul li {
 
 nav a {
     display: block;
-    color: white;
+    color: #fff;
     text-decoration: none;
     text-align: center;
     padding: 1rem;
@@ -79,7 +86,7 @@ main h1 {
 
 .card {
     height: 100%;
-    background: var(--main-color);
+    background: var(--light-green-color);
     
 }
 
@@ -100,9 +107,9 @@ main h1 {
 .card h2 {
     grid-column: 1/3;
     text-align: center;
-    background: var(--header-footer-color);
+    background: var(--green-color);
     padding: .5rem;
-    color: white;
+    color: #fff;
     width: 100%;
 }
 
@@ -110,7 +117,7 @@ main h1 {
     grid-column: 1/3;
     text-align: center;
     padding: .5rem;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #000;
     margin: .5rem;
 }
 
@@ -120,7 +127,7 @@ main h1 {
     padding: 1rem;
 }
 
-.about p {
+.about p, figure {
     padding: 1rem 1rem 1rem 2rem;
 }
 
@@ -129,7 +136,7 @@ main h1 {
 
 }
 
-figure, .location p {
+.location p {
     padding: 1rem 2rem 1rem 1rem;
 }
 
@@ -138,12 +145,12 @@ figcaption {
 }
 
 .resources h2 {
-    background: var(--nav-color);
-    color: white;
+    background: var(--dark-grey-color);
+    color: #fff;
 }
 
 .resources {
-    background: white;
+    background: var(--light-blue-color);
 }
 
 .resources ul {
@@ -151,8 +158,16 @@ figcaption {
     padding: 1rem;
 }
 
+.resources ul li a {
+    color: #000;
+}
+
+.resources ul li a:hover {
+    color: var(--green-color);
+}
+
 footer {
-    background: var(--card-color);
+    background: var(--blue-color);
     padding: 2rem;
     text-align: center;
 }
