--- a/styles/temples.css
+++ b/styles/temples.css
@@ -50,6 +50,7 @@ main {
 
 #menu::before {
     content: "≡";
+    color: var(--raisin-black);
 }
 
 nav {
@@ -87,6 +88,7 @@ nav a:hover {
 
 #menu.open::before {
     content: "⨉";
+    color: var(--raisin-black);
 }
 
 h1 {
