--- a/styles/form.css
+++ b/styles/form.css
@@ -17,6 +17,9 @@ body {
 }
 
 /* ------ HEADER ------ */
+header {
+    width: 100%;
+}
 h1 {
     text-align: center;
     background-color: var(--light-color);
@@ -26,7 +29,7 @@ h1 {
 /* ------ FORM ------ */
 /*indicates required field*/
 main{
-    max-width: 800px;
+    max-width: 1000px;
 }
 
 main p {
@@ -39,54 +42,88 @@ main p {
     font-weight: 600;
 }
 
+/*form elements*/
 form {
     max-width: 600px;
-    width: 500px;
+    width: 400px;
     margin: 0 auto;
     padding: 1rem 0;
 }
 
-/*labels & legends*/
 fieldset {
     border: none;
 }
 
 legend {
-    padding: 1.5rem 0 0;
+    padding: 2rem 0 0;
     font-weight: 700;
-}
-
-label {
-    display: block;
 }
 
 .em {
     font-style:italic;
 }
-/*stars*/
+/*stars rating*/
 .stars {
     display: flex;
-    justify-content: space-evenly;
+    width: 260px;
+    margin-top: 5px;
+    position: relative;
+    flex-direction: row-reverse;
+
+}
+.stars input {
+    display: none;
+}
+
+.stars > label {
+    width: 50px;
+    height: 50px;
+    font-family: "Montserrat", Helvetica, sans-serif;
+    font-size: 50px;
+    color: var(--orange-color);
+}
+
+.stars label::before {
+    content: '\2606';
+    position: absolute;
+    bottom: 5px;
+}
+
+.stars input:checked ~ label:before {
+    content: '\2605';
 }
 
 /*input fields*/
-
 input[type="date"],
 input[type="text"],
 input[type="submit"],
 select,
 textarea
 {
-width: 100%;
 height: 45px;
 font-family: "Montserrat", Helvetica, sans-serif; 
 font-size: 1rem;
-color: grey
+color: grey;
+}
+
+input[type="text"], 
+textarea, 
+input[type="submit"],
+select {
+    width: 100%;
 }
 textarea {
     height: 100px;
 }
 
+.checks {
+    display: grid;
+    grid-template-columns: 20px 1fr;
+    grid-gap: 8px;
+    margin-top: 5px;
+}
+
+/*submit button*/
 input[type="submit"] {
     margin-top: 1rem;
     background: var(--orange-color);
@@ -94,6 +131,12 @@ input[type="submit"] {
     border-radius: 10px;
     font-size: 1rem;
     color: var(--text-color);
+    font-weight: 600;
+}
+
+input[type="submit"]:hover {
+    background-color: var(--blue-color);
+    color: var(--light-color);
 }
 
 /* ------ FOOTER ------ */
