--- a/styles/form.css
+++ b/styles/form.css
@@ -29,7 +29,7 @@ h1 {
 /* ------ FORM ------ */
 /*indicates required field*/
 main{
-    max-width: 1000px;
+    max-width: 800px;
 }
 
 main p {
@@ -45,7 +45,7 @@ main p {
 /*form elements*/
 form {
     max-width: 600px;
-    width: 400px;
+    width: 350px;
     margin: 0 auto;
     padding: 1rem 0;
 }
@@ -104,6 +104,7 @@ height: 45px;
 font-family: "Montserrat", Helvetica, sans-serif; 
 font-size: 1rem;
 color: grey;
+border-radius: 10px;
 }
 
 input[type="text"], 
@@ -112,6 +113,7 @@ input[type="submit"],
 select {
     width: 100%;
 }
+
 textarea {
     height: 100px;
 }
@@ -125,7 +127,7 @@ textarea {
 
 /*submit button*/
 input[type="submit"] {
-    margin-top: 1rem;
+    margin-top: 2rem;
     background: var(--orange-color);
     border: none;
     border-radius: 10px;
@@ -144,4 +146,12 @@ footer {
     background-color: var(--light-color);
     padding: 1rem;
     text-align: center;
+    margin-top: 1rem;
+}
+
+/* ------ LARGER SCREENS ------ */
+@media (min-width: 600px) {
+    form {
+        width: 500px;
+    }
 }
