--- a/styles/form.css
+++ b/styles/form.css
@@ -14,6 +14,9 @@
 body {
     font-family: "Montserrat", Helvetica, sans-serif;
     color: var(--text-color);
+    max-width: 800px;
+    margin: 0 auto;
+    border: 1px solid var(--light-color);
 }
 
 /* ------ HEADER ------ */
@@ -28,9 +31,6 @@ h1 {
 
 /* ------ FORM ------ */
 /*indicates required field*/
-main{
-    max-width: 800px;
-}
 
 main p {
     padding-top: 1rem;
