css & nav changes

--- a/project/styles/project-large.css
+++ b/project/styles/project-large.css
@@ -6,8 +6,13 @@
     /* ----- HEADER ----- */
     header {
         display: flex;
-        align-items: center;
-        justify-content: space-between;
+        justify-content:space-between;
+
+    }
+
+    nav {
+        justify-content: flex-end;
+
     }
 
     #menu {
