--- a/project/styles/project.css
+++ b/project/styles/project.css
@@ -23,6 +23,7 @@ body {
 }
 
 /* ----- HEADER ----- */
+
 header,
 footer {
     background-color: var(--darkest-color);
@@ -38,14 +39,18 @@ header img {
 
 header {
     display: grid;
-    grid-template-columns: .7fr 2fr .6fr;
+    grid-template-columns: 1fr 60px;
+    align-items: center;
+}
+
+.logo {
+    display: flex;
     align-items: center;
 }
 
 header h1 {
-    text-align: center;
     color: var(--lightest-color);
-    font-size: 25px;
+    font-size: 1.5rem;
 }
 
 /* Navigation Menu */
@@ -98,6 +103,7 @@ nav a {
 nav a:hover {
     background: var(--pink-color);
     color: var(--lightest-color);
+    transition: .5s ease;
 }
 
 #menu.open::before {
@@ -187,12 +193,12 @@ footer img {
 
 .submenu a {
     color: var(--darkest-color);
-    padding: 0 1rem;
+    margin: 0 1rem;
     text-decoration:none;
 }
 
 .submenu a:hover {
-    font-weight: bolder;
+    font-weight:600;
 }
 
 .art-grid {
