--- a/project/styles/project.css
+++ b/project/styles/project.css
@@ -148,7 +148,6 @@ img {
 #explore:hover {
     background-color: var(--blue-color);
     color: var(--darkest-color);
-    font-weight: 800;
     transition: .5s ease;
 }
 
@@ -165,7 +164,7 @@ img {
     color: var(--pink-color);
 }
 
-
+/* ----- FOOTER ----- */
 footer {
     display: grid;
     grid-template-columns: 3fr 1fr;
@@ -225,4 +224,94 @@ footer img {
 .art-grid section p {
     text-align: center;
     padding: 0 1rem 1rem;
+}
+
+/* ----- CONTACT PAGE ----- */
+.heading {
+    padding: 1rem;
+    text-align: center;
+}
+
+.heading h2 {
+    padding: 1rem 0;
+}
+
+form {
+    display: block;
+    margin: 0 auto;
+    max-width: 450px;
+    align-items: center;
+    background-color: var(--lightest-color);
+    padding: 1rem;
+    border: solid 1px var(--darkest-color);
+}
+
+fieldset {
+    margin: 0 0 1.5rem;
+    border: none;
+}
+
+legend {
+    font-weight: 600;
+}
+
+input[type="text"],
+input[type="email"],
+.send
+ {
+    height: 45px;
+    width: 100%;
+    border: .5px solid var(--darkest-color);
+    font-family: "Poppins", Arial, Helvetica, sans-serif;
+    font-size: 1rem;
+    padding: 0 0 0 .5rem;
+}
+
+input[type="number"] {
+    width: 75px;
+    height: 45px;
+    font-size: 1rem;
+    font-family: "Poppins", Arial, Helvetica, sans-serif;
+    padding-left: 10px;
+    border: .5px solid var(--darkest-color);
+}
+
+textarea {
+    width: 100%;
+    height: 100px;
+    font-size: 1rem;
+    font-family: "Poppins", Arial, Helvetica, sans-serif;
+    border: .5px solid var(--darkest-color);
+    padding: .5rem;
+}
+
+.checks, .radio {
+    display: grid;
+    grid-gap: .5rem;
+    grid-template-columns: 40px 1fr;
+}
+
+.required {
+    font-size: 1.3rem;
+    color: var(--pink-color);
+    font-weight: bold;
+}
+
+.send {
+    border: none;
+    background-color: var(--darkest-color);
+    color: var(--lightest-color);
+    font-family: "Poppins", Arial, sans-serif;
+    font-size: 16px;
+}
+
+.send:hover {
+    background-color: var(--blue-color);
+    transition: .5s ease;
+    color: var(--darkest-color);
+    font-weight: 600;
+}
+
+.success {
+    margin-bottom: 200px;
 }
